Outliner Blender File filter ignores libraries #55161

Closed
opened 2018-05-23 14:10:04 +02:00 by Dalai Felinto · 3 comments

Blender Version
Broken: 7c5e174871 (HEAD blender2.8)

Short description of error

When using Outliner in the Blender File mode and its filtering system, the libraries are visible even when no relevant element is inside it.

Exact steps for others to reproduce the error

  • Link an object from a different file
  • In Outliner change mode to "Blender File"
  • Set Filter on (so it shows only collections)

As you can see in this image, the library is still around, even though I didn't link any collection from it:

lib.png

**Blender Version** Broken: 7c5e174871 (HEAD blender2.8) **Short description of error** When using Outliner in the Blender File mode and its filtering system, the libraries are visible even when no relevant element is inside it. **Exact steps for others to reproduce the error** * Link an object from a different file * In Outliner change mode to "Blender File" * Set Filter on (so it shows only collections) As you can see in this image, the library is still around, even though I didn't link any collection from it: ![lib.png](https://archive.blender.org/developer/F3440490/lib.png)
Brecht Van Lommel was assigned by Dalai Felinto 2018-05-23 14:10:04 +02:00
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto

This issue was referenced by 1c572b7412

This issue was referenced by 1c572b741262504882f0112d237ef9eedb1a019d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55161
No description provided.