Fix T55161: outliner Blender File with filter showing irrelevant libraries.